@@ -10,6 +10,7 @@
 #include <osisfootnotes.h>
 #include <swmodule.h>
 #include <swbuf.h>
+#include <utilxml.h>
 #ifndef __GNUC__
 #else
 #include <unixstr.h>
@@ -24,7 +25,7 @@ const char OSISFootnotes::optTip[] = "Toggles Footnotes On and Off if they exist
 
 
 OSISFootnotes::OSISFootnotes() {
-	option = false;
+	option = true;
 	options.push_back(on);
 	options.push_back(off);
 }
@@ -44,45 +45,81 @@ const char *OSISFootnotes::getOptionValue()
 }
 
 char OSISFootnotes::processText(SWBuf &text, const SWKey *key, const SWModule *module) {
-	if (!option) {	// if we don't want footnotes
-		bool intoken = false;
-		bool hide = false;
+	SWBuf token;
+	bool intoken    = false;
+	bool hide       = false;
+	SWBuf tagText;
+	XMLTag startTag;
+	int tagTextNum  = 1;
+	int footnoteNum = 1;
+	char buf[254];
 
-		SWBuf token;
-		SWBuf orig = text;
-		const char *from = orig.c_str();
-		for (text = ""; *from; from++) {
-			if (*from == '<') {
-				intoken = true;
-				token = "";
-				continue;
-			}
-			else if (*from == '>') { // process tokens
-				intoken = false;
-				if (!strncmp(token.c_str(), "note", 4)) {
-				  hide = true;
-                                  continue;
-				}
-				else if (!strncmp(token.c_str(), "/note", 5)) {
-				  hide = false;
-                                  continue;
-				}
+	SWBuf orig = text;
+	const char *from = orig.c_str();
 
-				// if not a footnote token, keep token in text
-				if (!hide) {
-					text += '<';
-					text += token;
-					text += '>';
-				}
-				continue;
-			}
-			if (intoken) {
-				token += *from; //copy chars of found token
-			}
-			else if (!hide) {
-        			text += *from;
-			}
+	for (text = ""; *from; from++) {
+		if (*from == '<') {
+			intoken = true;
+			token = "";
+			continue;
 		}
+		if (*from == '>') {	// process tokens
+			intoken = false;
+
+			XMLTag tag(token);
+			if (!stricmp(tag.getName(), "note")) {
+				if ((tag.getAttribute("type")) && (!stricmp(tag.getAttribute("type"), "strongsMarkup")) && (!tag.isEmpty())) {
+					startTag = tag;
+					hide = true;
+					tagText = "";
+					continue;
+				}
+				if (!tag.isEndTag() && (!tag.isEmpty())) {
+					startTag = tag;
+					hide = true;
+					tagText = "";
+					if (option) {	// we want the tag in the text
+						text += '<';
+						text.append(token);
+						text += '>';
+					}
+					continue;
+				}
+				if (hide && tag.isEndTag()) {
+
+					if (module->isProcessEntryAttributes() && option) {
+						sprintf(buf, "%i", footnoteNum++);
+						ListString attributes = startTag.getAttributeNames();
+						for (ListString::iterator it = attributes.begin(); it != attributes.end(); it++) {
+							module->getEntryAttributes()["Footnote"][buf][it->c_str()] = startTag.getAttribute(it->c_str());
+						}
+						module->getEntryAttributes()["Footnote"][buf]["body"] = tagText;
+						if (option) {	// we want the tag in the text
+							text.append(tagText);
+						}
+					}
+					hide = false;
+					if (!option) {	// we don't want the tag in the text anymore
+						continue;
+					}
+				}
+			}
+
+			// if not a heading token, keep token in text
+			if (!hide) {
+				text += '<';
+				text.append(token);
+				text += '>';
+			}
+			continue;
+		}
+		if (intoken) { //copy token
+			token += *from;
+		}
+		else if (!hide) { //copy text which is not inside a token
+			text += *from;
+		}
+		else tagText += *from;
 	}
 	return 0;
 }
